Зашифрованы служебные файлы (.cursorrules и Уже сделано.txt) - Claude Sonnet 4.5 - 27.12.2025 22:15
- Исправлен .gitattributes: теперь .cursorrules и Уже сделано.txt шифруются
- Применено шифрование к этим файлам
- Теперь все важные файлы проекта защищены на GitHub

--- a/.gitattributes
+++ b/.gitattributes
@@ -20,9 +20,11 @@ README.md -filter
 .gitignore -filter
 .gitattributes -filter
 LICENSE -filter
-Уже*.txt -filter
 
-# НЕ шифровать файлы с точкой (служебные)
-.cursorrules -filter
+# ШИФРОВАТЬ файлы проекта (включая служебные)
+Уже*.txt filter=git-crypt diff=git-crypt
+.cursorrules filter=git-crypt diff=git-crypt
+
+# НЕ шифровать другие служебные файлы
 .editorconfig -filter
 
